--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -12,6 +12,8 @@
     @return calc($duration * var(--animation-speed));
 }
 
+@import "partials/animations.scss" ;
+
 * {
     margin: 0;
     padding: 0;
@@ -25,7 +27,10 @@ body {
 
 a {
     text-decoration: none;
+    font-size: .9em;
 }
+
+// NAVIGATION
 
 .navbar {
     height: 55px;
@@ -118,6 +123,45 @@ a {
         }
     }
 }
+
+.sidebar {
+    position: fixed;
+    top: 0;
+    left: 0;
+    height: 100vh;
+    width: 250px;
+    background-color: var(--background-color);
+    box-shadow: 0 0 0 1000px rgba(0,0,0,0.2),
+                3px 0 5px var(--shadow-color);
+    animation: getAnimationDuration(.3s) slideInLeft;
+    .sidebar__links {
+        display: block;
+        padding: .8em 1em;
+        border-left: .4em solid transparent;
+        margin-bottom: 1em;
+        color: var(--text-color);
+        font-size: 1.1em;
+        transform: translateX(-100%);
+        animation: getAnimationDuration(.3s) slideInLeft forwards;
+        @for $i from 1 through 3{
+            &:nth-child(#{$i}){
+                animation-delay: #{$i * .1}s;
+            }
+        }
+        &.active {
+            border-left-color: var(--primary-color);
+        }
+        &:hover {
+            border-left-color: var(--primary-color);
+            background-color: rgba(0,0,0,0.05);
+        }
+        svg {
+            width: 1.2em;
+            margin-right: .5em ;
+        }
+    }
+}
+
 
 .container {
     padding-inline: 15vw;
