--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -52,21 +52,17 @@ img {
     }
 }
 
-//LANDING PAGE
-
-.main {
-    padding-block: 3vw;
-}
-
 .section {
     display: flex;
     align-items: center;
+    margin-bottom: 3vw;
     .column {
         width: 50%;
     }
     .title {
         color: var(--text-color);
-        font-size: 3em;
+        font-size: 2.5em;
+        font-weight: 900;
         margin-bottom: .25em;
     }
     .info {
@@ -78,75 +74,36 @@ img {
     }
 }
 
-.section.landing {
-    .gallery {
-        display: grid;
-        grid-template-columns: repeat(3, 1fr);
-        gap: 1.75vw;
+//LANDING 
+@import "partials/landing";
+
+//SKILLS
+
+.section.skills {
+    .column.img {
+        img{
+            width: 100%;
+        }
     }
-    .typography {
-        padding-right: 1em;
+    .column.typography {
+        padding-left: 1em;
     }
-    .food__image {
-        transform: scale(0);
-        border-radius: 5px;
-        overflow: hidden;
+    .skills__list {
+        border-left: 0.2em solid var(--primary-color);
+        margin-bottom: 0.5em;
+        padding: 0.1em 0 0.2em 0.5em;
+        color: var(--text-light);
+        font-weight: bold;
+        transform: translateX(100%);
         opacity: 0;
-        animation: getAnimationDuration(.5s) popOut forwards;
-        &:nth-child(2){
-            animation-delay: .1s;
-        }
-        &:nth-child(3){
-            animation-delay: .2s;
-        }
-        &:nth-child(6){
-            animation-delay: .3s;
-        }
-        &:nth-child(9){
-            animation-delay: .4s;
-        }
-        &:nth-child(8){
-            animation-delay: .5s;
-        }
-        &:nth-child(7){
-            animation-delay: .6s;
-        }
-        &:nth-child(4){
-            animation-delay: .7s;
-        }
-        &:nth-child(5){
-            animation-delay: .8s;
+        animation: getAnimationDuration(0.3s) slideInRight forwards;
+        @for $i from 2 through 7 {
+            &:nth-child(#{$i}){
+                animation-delay: #{$i * .1}s;
+            }
         }
     }
-}
-
-.btn {
-    border: none;
-    outline: none;
-    background-color: var(--primary-color);
-    color: white;
-    padding: .75em 1em;
-    text-transform: uppercase;
-    font-size: 1.1em;
-    letter-spacing: 1px;
-    border-radius: 3px;
-    font-weight: bold;
-    box-shadow: 0 2px 6px var(--shadow-color);
-    &:hover {
-        box-shadow: 0 1px 3px var(--shadow-color);
-    }
-}
-
-.food__image {
-    background-color: red;
-    height: 0;
-    width: 100%;
-    position: relative;
-    img {
-        position: absolute;
-        top: 0;
-        left: 0;
-        height: 100%;
-        width: 100%;
+    .btn {
+        margin-top: 0.75em;
     }
 }
