--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,3 +1,4 @@
+//GLOBAL STYLES/RESPONSIVENESS
 :root{
     --background-color: #fff;
     --background-light: #fff;
@@ -23,6 +24,7 @@
 body {
     font-size: var(--font-size);
     font-family: 'Roboto', sans-serif;
+    padding-top: 55px;
 }
 
 a {
@@ -34,28 +36,11 @@ img {
     object-fit: cover;
 }
 
-.container {
-    padding-inline: 15vw;
-}
-// NAVIGATION
-@import "partials/navbar";
-
- 
-@media screen and (max-width: 768px) {
-    .navbar {
-        .nav__links {
-            display: none;
-        }
-        .sidebar__btn {
-            display: block;
-        }
-    }
-}
-
 .section {
     display: flex;
     align-items: center;
     margin-bottom: 3vw;
+    flex-wrap: wrap;
     .column {
         width: 50%;
     }
@@ -74,36 +59,113 @@ img {
     }
 }
 
+.container {
+    padding-inline: 25vw;
+}
+
+@media screen and (max-width: 1280px) {
+    .container {
+        padding-inline: 18vw;
+    }
+}
+
+@media screen and (max-width: 1050px) {
+    .container {
+        padding-inline: 12vw;
+    }
+}
+
+@media screen and (max-width: 760px) {
+    .container {
+        padding-inline: 6vw;
+    }
+}
+
+@media screen and (max-width: 500px) {
+    .container {
+        padding-inline: 3vw;
+    }
+}
+
+// NAVIGATION
+@import "partials/navbar";
+
+@media screen and (max-width: 768px) {
+    .navbar {
+        .nav__links {
+            display: none;
+        }
+        .sidebar__btn {
+            display: block;
+        }
+    }
+    .chef__card {
+        box-shadow: 0 5px 10px var(--shadow-color)
+    }
+
+    .section {
+        .column {
+            width: 100%;
+            padding: 0 !important;
+            text-align: center;
+            margin-bottom: 2em;
+        }
+    }
+
+    .skills__list {
+        display: inline-block;
+        margin: 0.75em;
+    }
+    .section.skills .btn {
+        display: block;
+        margin-left: 50%;
+        transform: translateX(-50%);
+    }
+    .footer {
+        grid-template-columns: repeat(4, 1fr);
+        .footer__section:nth-child(1) {
+            grid-column:span 4 ;
+        }
+        .footer__section:nth-child(2), .footer__section:nth-child(3) {
+            grid-column:span 2 ;
+        }
+    }
+}
+
 //LANDING 
 @import "partials/landing";
 
 //SKILLS
 
-.section.skills {
-    .column.img {
-        img{
-            width: 100%;
+@import "partials/skills";
+
+//QUOTE
+
+@import "partials/quote";
+
+//CHEF PROFILES
+
+@import "partials/chefprofiles";
+
+//FOOTER
+
+.footer {
+    background-color: #0f0f0f;
+    color: white;
+    padding-block: 3em;
+    display: grid;
+    grid-template-columns: 2fr 1fr 1fr;
+    grid-gap: 1em;
+    .footer__section {
+        p{
+            opacity: 0.8;
+            margin-bottom: 0.9em;
         }
-    }
-    .column.typography {
-        padding-left: 1em;
-    }
-    .skills__list {
-        border-left: 0.2em solid var(--primary-color);
-        margin-bottom: 0.5em;
-        padding: 0.1em 0 0.2em 0.5em;
-        color: var(--text-light);
-        font-weight: bold;
-        transform: translateX(100%);
-        opacity: 0;
-        animation: getAnimationDuration(0.3s) slideInRight forwards;
-        @for $i from 2 through 7 {
-            &:nth-child(#{$i}){
-                animation-delay: #{$i * .1}s;
-            }
+        p.title {
+            opacity: 1;
+            font-weight: bold;
+            margin-bottom: 1em;
+            font-size: 1.1em;
         }
-    }
-    .btn {
-        margin-top: 0.75em;
     }
 }
