--- a/src/styles/partials/_landing.scss
+++ b/src/styles/partials/_landing.scss
@@ -55,6 +55,7 @@
     letter-spacing: 1px;
     border-radius: 3px;
     font-weight: bold;
+    cursor: not-allowed;
     box-shadow: 0 2px 6px var(--shadow-color);
     &:hover {
         box-shadow: 0 1px 3px var(--shadow-color);
