--- a/src/styles/partials/_navbar.scss
+++ b/src/styles/partials/_navbar.scss
@@ -6,6 +6,10 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    z-index: 998;
+    position: fixed;
+    width: 100%;
+    top: 0;
     .logo {
         font-size: 1.3em;
         font-weight: bold;
@@ -96,6 +100,7 @@
     left: 0;
     height: 100vh;
     width: 250px;
+    z-index: 999;
     background-color: var(--background-color);
     box-shadow: 0 0 0 1000px rgba(0,0,0,0.2),
                 3px 0 5px var(--shadow-color);
