--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -148,24 +148,47 @@ img {
 @import "partials/chefprofiles";
 
 //FOOTER
+@import "partials/footer";
 
-.footer {
-    background-color: #0f0f0f;
-    color: white;
-    padding-block: 3em;
-    display: grid;
-    grid-template-columns: 2fr 1fr 1fr;
-    grid-gap: 1em;
-    .footer__section {
-        p{
-            opacity: 0.8;
-            margin-bottom: 0.9em;
+.previous__searches {
+    display: block;
+    h2{
+        color: var(--text-color);
+        margin-bottom: 0.5em;
+    }
+    .previous__searches--container {
+        .search__item {
+            background-color: var(--primary-color);
+            display: inline-block;
+            padding: 0.5em 1em;
+            color: white;
+            margin: 0 1em 0.5em 0;
+            border-radius: 30px;
+            box-shadow: 0 3px 6px var(--shadow-color);
+            animation: getAnimationDuration(0.5s) slideInRight forwards;
+            transform: translateX(100%);
+            opacity: 0;
         }
-        p.title {
-            opacity: 1;
-            font-weight: bold;
-            margin-bottom: 1em;
-            font-size: 1.1em;
+    }
+    .search__box {
+        display: flex;
+        align-items: center;
+        justify-content: flex-end;
+        height: 40px;
+        input, .btn {
+            height: 40px;
+        }
+        input {
+            min-width:250px;
+            padding: 0 0.5em;
+            border-radius: 5px 0 0 5px;
+            outline: none;
+            border: 1px solid #4d4d4d;
+        }
+        .btn {
+            padding-block: 0;
+            padding-inline: 1em;
+            border-radius: 0 5px 5px 0;
         }
     }
 }
