--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -150,45 +150,38 @@ img {
 //FOOTER
 @import "partials/footer";
 
-.previous__searches {
-    display: block;
-    h2{
-        color: var(--text-color);
+//SEARCH BAR
+@import "partials/_SearchBar";
+
+.recipe__card--container {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
+    grid-gap: 1.5em;
+    .recipe__card--info {
+        padding: 15px ;
+    }
+    .recipe__card {
+        border-radius: 5px;
+        overflow: hidden;
+        box-shadow: 0 5px 15px var(--shadow-color);
+    }
+    .recipe__card--title {
+        font-size: 1.25em;
+        font-weight: bold;
         margin-bottom: 0.5em;
+        color: var(--text-color);
+        margin-top: 0.25em;
     }
-    .previous__searches--container {
-        .search__item {
-            background-color: var(--primary-color);
-            display: inline-block;
-            padding: 0.5em 1em;
-            color: white;
-            margin: 0 1em 0.5em 0;
-            border-radius: 30px;
-            box-shadow: 0 3px 6px var(--shadow-color);
-            animation: getAnimationDuration(0.5s) slideInRight forwards;
-            transform: translateX(100%);
-            opacity: 0;
-        }
+    .recipe__card--description {
+        color: var(--text-light);
+        font-size: 0.9em;
+        letter-spacing: 0.5px;
     }
-    .search__box {
-        display: flex;
-        align-items: center;
-        justify-content: flex-end;
-        height: 40px;
-        input, .btn {
-            height: 40px;
-        }
-        input {
-            min-width:250px;
-            padding: 0 0.5em;
-            border-radius: 5px 0 0 5px;
-            outline: none;
-            border: 1px solid #4d4d4d;
-        }
-        .btn {
-            padding-block: 0;
-            padding-inline: 1em;
-            border-radius: 0 5px 5px 0;
-        }
+    .recipe__card--btn {
+        color: var(--primary-color);
+        font-size: 1em;
+        font-weight: bold;
+        margin-top: 0.75em;
+        display: inline-block;
     }
 }
