--- a/src/styles/partials/_skills.scss
+++ b/src/styles/partials/_skills.scss
@@ -4,6 +4,9 @@
             width: 100%;
         }
     }
+    .btn {
+        cursor: not-allowed;
+    }
     .column.typography {
         padding-left: 1em;
     }
