--- a/src/styles/partials/_landing.scss
+++ b/src/styles/partials/_landing.scss
@@ -11,6 +11,9 @@
     .typography {
         padding-right: 1em;
     }
+    .btn {
+        cursor: not allowed;
+    }
     .food__image {
         transform: scale(0);
         border-radius: 5px;
@@ -55,7 +58,7 @@
     letter-spacing: 1px;
     border-radius: 3px;
     font-weight: bold;
-    cursor: not-allowed;
+    cursor: pointer;
     box-shadow: 0 2px 6px var(--shadow-color);
     &:hover {
         box-shadow: 0 1px 3px var(--shadow-color);
