settings page options initial implementation

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -197,6 +197,11 @@ img {
                 width: 1.5em;
             }
         }
+
+    }
+    .btn span {
+        display: inline-block;
+        margin-left: 0.5em;
     }
 }
 .block {
