--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -25,6 +25,7 @@ body {
     font-size: var(--font-size);
     font-family: 'Roboto', sans-serif;
     padding-top: 55px;
+    background-color: var(--background-light);
 }
 
 a {
@@ -165,7 +166,7 @@ img {
     padding: 1em;
     border-radius: 5px;
     border-left: 0.5em solid var(--primary-color);
-    background-color: var(--background-color);
+    background-color: var(--background-light);
     margin-top: 1em;
     display: flex;
     gap: 1em;
@@ -207,5 +208,6 @@ img {
 .block {
     h2 {
         font-size: 1.75em;
+        color: var(--text-color);
     }
 }
