--- a/src/styles/partials/_chefprofiles.scss
+++ b/src/styles/partials/_chefprofiles.scss
@@ -21,6 +21,7 @@
         box-shadow: 0 3px 6px var(--shadow-color);
        }
        .chef__card--info {
+        padding-top: 0.65em;
         height: 100%;
         display: flex;
         flex-direction: column;
